--- a/src/Services/Services.csproj
+++ b/src/Services/Services.csproj
@@ -14,6 +14,7 @@
     <ProjectReference Include="..\Core\Core.csproj" />
     <ProjectReference Include="..\DataTransferObjects\DataTransferObjects.csproj" />
     <ProjectReference Include="..\Entities\Entities.csproj" />
+    <ProjectReference Include="..\Shared\Shared.csproj" />
   </ItemGroup>
 
 </Project>
